--- a/Host/App.config
+++ b/Host/App.config
@@ -36,6 +36,7 @@
 		<services>
 			<service name="ServicioJuego.ImplementacionServicio">
 				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestionCuentaServicio"/>
+				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.ILobbyManager"/>
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
 				<host>
 					<baseAddresses>
