implimentacion de validar cuenta y nombre usuario ya exitente

--- a/AccesoDatos/App.config
+++ b/AccesoDatos/App.config
@@ -6,7 +6,7 @@
   </configSections>
 	<connectionStrings>
 		<add name="ContactoBaseDatos"
-			 connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;Trust Server Certificate=True"
+			 connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;Trust Server Certificate=True"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>	
   <entityFramework>
