--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\202410202236079_arreglarTablas.Designer.cs">
       <DependentUpon>202410202236079_arreglarTablas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410300131553_AgregarCampoSaltEnCuenta.cs" />
+    <Compile Include="Migrations\202410300131553_AgregarCampoSaltEnCuenta.Designer.cs">
+      <DependentUpon>202410300131553_AgregarCampoSaltEnCuenta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo\Cuenta.cs" />
     <Compile Include="Modelo\Jugador.cs" />
@@ -85,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410202236079_arreglarTablas.resx">
       <DependentUpon>202410202236079_arreglarTablas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410300131553_AgregarCampoSaltEnCuenta.resx">
+      <DependentUpon>202410300131553_AgregarCampoSaltEnCuenta.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
