--- a/Host/App.config
+++ b/Host/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -37,6 +37,9 @@
 			<service name="ServicioJuego.ImplementacionServicio">
 				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestionCuentaServicio"/>
 				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.ILobbyManager"/>
+				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorAmistad"/>
+				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorDeSolicitudesDeAmistad"/>
+				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorUsuariosConectados"/>
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
 				<host>
 					<baseAddresses>
