--- a/Pruebas/Pruebas.csproj
+++ b/Pruebas/Pruebas.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PruebaAmistadDao.cs" />
     <Compile Include="PruebaCuentaDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PruebaImplementaciónSalaEspera.cs" />
