cosas de amigos

--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Modelo\App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
