--- a/Host/App.config
+++ b/Host/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -28,19 +28,20 @@
 		<behaviors>
 			<serviceBehaviors>
 				<behavior>
-					<serviceMetadata/>
-					<serviceDebug includeExceptionDetailInFaults="false"/>
+					<serviceMetadata />
+					<serviceDebug includeExceptionDetailInFaults="false" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
 		<services>
 			<service name="ServicioJuego.ImplementacionServicio">
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestionCuentaServicio" />
-				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.ILobbyManager"/>
+				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.ILobbyManager" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorAmistad" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorDeSolicitudesDeAmistad" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorUsuariosConectados" />
-				<endpoint address ="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IServicioPartida"/>
+				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IServicioPartida" />
+				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorInvitacion" />
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 				<host>
 					<baseAddresses>
@@ -51,4 +52,60 @@
 		</services>
 
 	</system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Caching.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.32.0" newVersion="3.1.32.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
