--- a/ServicioJuego/ServicioJuego.csproj
+++ b/ServicioJuego/ServicioJuego.csproj
@@ -54,14 +54,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Correo\EnviadorCorreos.cs" />
+    <Compile Include="Correo\Plantillas\IPlantillaCorreo.cs" />
+    <Compile Include="Correo\Plantillas\PlantillaInvitacionSalaEspera.cs" />
     <Compile Include="Excepciones\HuntersTrophyExcepcion.cs" />
     <Compile Include="IGestionCuentaServicio.cs" />
     <Compile Include="IGestorAmistad.cs" />
     <Compile Include="IGestorDeSolicitudesDeAmistad.cs" />
+    <Compile Include="IGestorInvitacion.cs" />
     <Compile Include="IGestorUsuariosConectados.cs" />
     <Compile Include="ImplementacionSalaEspera.cs" />
     <Compile Include="ILobbyManager.cs" />
     <Compile Include="ImplementacionServicioAmistad.cs" />
+    <Compile Include="ImplementacionServicioInvitacion.cs" />
     <Compile Include="ImplementacionServicioPartida.cs" />
     <Compile Include="ImplementacionUsuariosLinea.cs" />
     <Compile Include="IServicioPartida.cs" />
