--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -117,9 +117,14 @@
     <Compile Include="Migrations\202410301332375_relacion.Designer.cs">
       <DependentUpon>202410301332375_relacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412120700129_añadirEstadisticas.cs" />
+    <Compile Include="Migrations\202412120700129_añadirEstadisticas.Designer.cs">
+      <DependentUpon>202412120700129_añadirEstadisticas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo\Amistad.cs" />
     <Compile Include="Modelo\Cuenta.cs" />
+    <Compile Include="Modelo\Estadisticas.cs" />
     <Compile Include="Modelo\Jugador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilidades\GestionLogger.cs" />
@@ -154,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410301332375_relacion.resx">
       <DependentUpon>202410301332375_relacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412120700129_añadirEstadisticas.resx">
+      <DependentUpon>202412120700129_añadirEstadisticas.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
