--- a/AccesoDatos/App.config
+++ b/AccesoDatos/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;Trust Server Certificate=True" providerName="System.Data.SqlClient" />
+		<add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;Trust Server Certificate=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>	
   <entityFramework>
     <providers>
