--- a/Host/App.config
+++ b/Host/App.config
@@ -46,7 +46,7 @@
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localHost:8000/ServiceImplementation" />
+						<add baseAddress="net.tcp://192.168.244.224:8000/ServiceImplementation" />
 					</baseAddresses>
 				</host>
 			</service>
