--- a/ServicioJuego/packages.config
+++ b/ServicioJuego/packages.config
@@ -1,4 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
+  <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net472" />
+  <package id="GSF.Core" version="2.4.28" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
 </packages>
