--- a/Pruebas/Pruebas.csproj
+++ b/Pruebas/Pruebas.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PruebaEstadistica.cs" />
     <Compile Include="PruebaJugadorDao.cs" />
+    <Compile Include="PruebaRecursos.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
