cambios de estandar y modificación de metodos

--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo\Amistad.cs" />
     <Compile Include="Modelo\Cuenta.cs" />
-    <Compile Include="Modelo\Estadisticas.cs" />
+    <Compile Include="Modelo\Estadistica.cs" />
     <Compile Include="Modelo\Jugador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilidades\GestionLogger.cs" />
