--- a/Host/App.config
+++ b/Host/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="ContactoBaseDatos" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=juegoBd;User ID=adminJuego;Password=1234;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -19,8 +19,15 @@
 		<bindings>
 			<netTcpBinding>
 				<binding name="tcpBinding">
+					<reliableSession enabled="true"/>
 					<security mode="None">
 						
+					</security>
+				</binding>
+				<binding name="tcpReliableBinding">
+					<reliableSession enabled="true" inactivityTimeout="00:00:30"/>
+					<security mode="None">
+                    
 					</security>
 				</binding>
 			</netTcpBinding>
@@ -29,7 +36,7 @@
 			<serviceBehaviors>
 				<behavior>
 					<serviceMetadata />
-					<serviceDebug includeExceptionDetailInFaults="true" />
+					<serviceDebug includeExceptionDetailInFaults="false" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
@@ -40,13 +47,13 @@
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorAmistad" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorDeSolicitudesDeAmistad" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorUsuariosConectados" />
-				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IServicioPartida" />
+				<endpoint address="Servicio" binding="netTcpBinding" bindingConfiguration="tcpReliableBinding" contract="ServicioJuego.IServicioPartida" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IGestorInvitacion" />
 				<endpoint address="Service" binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="ServicioJuego.IEstadisticasGlobales" />
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://192.168.48.57:8000/ServiceImplementation" />
+						<add baseAddress="net.tcp://192.168.1.68:8000/ServiceImplementation" />
 					</baseAddresses>
 				</host>
 			</service>
